# LLMs_from_Scratch

./: CausalAttention.py  ch02_working_with_text_data.ipynb  ch03_coding_attention_mechanisms.ipynb  createDatasetTensors.py  main.py  pyproject.toml
