[project]
name = "build-llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel",
    "lxml>=6.0.1",
    "numpy",
    "packages",
    "tiktoken",
    "torch",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "ipykernel",
]
